--- a/source_js/source/ts/dashboard/dashboard.pug
+++ b/source_js/source/ts/dashboard/dashboard.pug
@@ -20,6 +20,10 @@ div
                             span
                                 i.material-icons date_range
                             span {{ instance.buildDate }}
+                md-card-content
+                    .branch.pull-left
+                        i.fa.fa-code-fork
+                        span {{ instance.branchName }}
                 md-card-actions.card-footer
                     .pull-left.author
                         span
