User can create new instance (front)

--- a/source_js/source/ts/dashboard/newBuild/newBuild.modal.pug
+++ b/source_js/source/ts/dashboard/newBuild/newBuild.modal.pug
@@ -24,13 +24,13 @@ md-dialog.new-build-modal
                 md-checkbox.md-primary(ng-if="modalCtrl.buildService.checklists.length > 0" ng-model="modalCtrl.checklistsVisible") Powiąż checklistę
                 md-input-container(ng-if="modalCtrl.checklistsVisible && modalCtrl.buildService.checklists.length > 0")
                     label Wybierz checklistę do podpięcia
-                    md-select(name="checklist" required ng-model="modalCtrl.buildConfiguration.checklist")
+                    md-select(name="checklist" required ng-model="modalCtrl.buildConfiguration.checklistId")
                         md-option(ng-repeat="checklist in modalCtrl.buildService.checklists" ng-value="checklist.id") {{ checklist.name }}
                 md-checkbox.md-primary(ng-if="modalCtrl.buildService.jiraTasks.length > 0" ng-model="modalCtrl.jiraVisible") Powiąż z taskiem w Jirze
                 md-input-container(ng-if="modalCtrl.jiraVisible && modalCtrl.buildService.jiraTasks.length > 0")
                     label Wybierz task z Jiry
-                    md-select(name="task" required ng-model="modalCtrl.buildConfiguration.jiraTask")
+                    md-select(name="task" required ng-model="modalCtrl.buildConfiguration.jiraTaskSymbol")
                         md-option(ng-repeat="task in modalCtrl.buildService.jiraTasks" ng-value="task.symbol") {{ task.symbol }} - {{ task.name }}
-    md-dialog-actions
-        md-button(ng-click="modalCtrl.close()") Anuluj
-        md-button.md-raised.md-primary(ng-if="modalCtrl.buildService.branches.length > 0" ng-disabled="!newBuildForm.$valid") Dodaj
+                .form-actions
+                    md-button(ng-click="modalCtrl.close()") Anuluj
+                    md-button.md-raised.md-primary(ng-click="modalCtrl.save()" ng-if="modalCtrl.buildService.branches.length > 0" ng-disabled="!newBuildForm.$valid") Dodaj
