--- a/source_js/source/scss/dashboard.scss
+++ b/source_js/source/scss/dashboard.scss
@@ -75,6 +75,7 @@
 
   .branch {
     height: 20px;
+    margin-bottom: 20px;
 
     i {
       margin-right: 10px;
@@ -94,10 +95,74 @@
       justify-content: space-around;
       color: $background600;
 
-      .checklist {
+      .build-checklist {
+        flex:  30;
+        overflow: hidden;
+        margin-right: 20px;
+
+        .checklist-title {
+          font-weight: bold;
+
+          &:before {
+            content: '\f0ca';
+            font-family: FontAwesome;
+            text-align: center;
+            float: left;
+            display: block;
+            margin-right: 10px;
+          }
+        }
+
+        .build-checklist-items {
+          width: 100%;
+
+          .item-name {
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            padding: 5px;
+
+            input {
+              display: none;
+            }
+
+            label {
+              cursor: pointer;
+
+              &:before {
+                width: 18px;
+                height: 18px;
+                display: block;
+                content: '';
+                border: 1px solid black;
+                border-radius: 3px;
+                cursor: pointer;
+                float: left;
+                margin-right: 10px;
+              }
+            }
+
+            input:checked + label{
+              text-decoration: line-through;
+
+              &:before {
+                border: 1px solid gray;
+                content: '\f00c';
+                font-family: FontAwesome;
+                text-align: center;
+              }
+            }
+          }
+        }
       }
 
       .jira {
+        flex: 70;
+
+        h4 {
+          margin: 0;
+          padding: 0;
+        }
       }
     }
   }
