--- a/source_js/source/scss/dashboard.scss
+++ b/source_js/source/scss/dashboard.scss
@@ -12,6 +12,14 @@
   }
 }
 
+button.md-icon-button.change-build {
+  float: left;
+  height: auto;
+  padding: 0;
+  margin: 0;
+  line-height: 30px;
+}
+
 .new-build-modal {
   max-width: 700px;
 
