--- a/source_js/source/scss/header.scss
+++ b/source_js/source/scss/header.scss
@@ -6,6 +6,9 @@
     position: absolute;
     line-height: 59px;
     width: 90%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
 
     .navigation-button {
       border-bottom: 3px solid rgba(0,0,0,0);
