--- a/source_js/source/ts/dashboard/newBuild/newBuild.modal.pug
+++ b/source_js/source/ts/dashboard/newBuild/newBuild.modal.pug
@@ -2,44 +2,45 @@ md-dialog.new-build-modal
     md-toolbar
         .md-toolbar-tools Nowy build
     md-dialog-content
-        .md-dialog-content(ng-if="modalCtrl.buildService.branches.length === 0")
-            p Nie mogliśmy pobrać listy dostępnych branchy. Jesteś pewien, że ustawienia projektu są poprawne?
-        .md-dialog-content(ng-if="modalCtrl.buildService.databases.length === 0")
-            p Nie istnieje żadna wolna baza danych. Usuń którąś z instancji, lub poproś administratora o dodanie kolejnych baz
-        .md-dialog-content(ng-if="modalCtrl.buildService.branches.length > 0 && modalCtrl.buildService.databases.length > 0")
+        .md-dialog-content
             p(ng-if="modalCtrl.buildConfiguration.instanceId < 0") Aby stworzyć nowe środowisko testowe podaj kilka informacji
             p(ng-if="modalCtrl.buildConfiguration.instanceId >= 0") Zmiana konfiguracji środowiska spowoduje usunięcie obecnych informacji - dobrze się zastanów!
             md-progress-circular.center(md-mode="indeterminate" ng-show="!modalCtrl.ready")
-            form(name="newBuildForm" layout="column" novalidate ng-if="modalCtrl.ready")
-                md-input-container
-                    label Nazwa builda
-                    input(name="name" minlength="3" maxlength="30" required ng-model="modalCtrl.buildConfiguration.name")
-                    div(ng-messages="newBuildForm.name.$error")
-                        div(ng-message="required") To pole jest wymagane
-                        div(ng-message="md-maxlength") Nazwa nie może być dłuższa niż 30 znaków
-                        div(ng-message="minlength") Nazwa nie może być krótsza niż 3 znaki
-                md-input-container
-                    label Wybierz branch
-                    md-select(name="branch" required ng-model="modalCtrl.buildConfiguration.branch")
-                        md-option(ng-repeat="branch in modalCtrl.buildService.branches" ng-value="branch") {{ branch }}
-                    div(ng-messages="newBuildForm.branch.$error")
-                        div(ng-message="required") To pole jest wymagane
-                md-input-container
-                    label Wybierz bazę danych
-                    md-select(name="database" required ng-model="modalCtrl.buildConfiguration.databaseId")
-                        md-option(ng-repeat="database in modalCtrl.buildService.databases" ng-value="database.id") {{ database.name }} - {{ database.comment }}
-                    div(ng-messages="newBuildForm.database.$error")
-                        div(ng-message="required") To pole jest wymagane
-                md-checkbox.md-primary(ng-if="modalCtrl.buildService.checklists.length > 0" ng-model="modalCtrl.checklistsVisible") Powiąż checklistę
-                md-input-container(ng-if="modalCtrl.checklistsVisible && modalCtrl.buildService.checklists.length > 0")
-                    label Wybierz checklistę do podpięcia
-                    md-select(name="checklist" required ng-model="modalCtrl.buildConfiguration.checklistId")
-                        md-option(ng-repeat="checklist in modalCtrl.buildService.checklists" ng-value="checklist.id") {{ checklist.name }}
-                md-checkbox.md-primary(ng-if="modalCtrl.buildService.jiraTasks.length > 0" ng-model="modalCtrl.jiraVisible") Powiąż z taskiem w Jirze
-                md-input-container(ng-if="modalCtrl.jiraVisible && modalCtrl.buildService.jiraTasks.length > 0")
-                    label Wybierz task z Jiry
-                    md-select(name="task" required ng-model="modalCtrl.buildConfiguration.jiraTaskSymbol")
-                        md-option(ng-repeat="task in modalCtrl.buildService.jiraTasks" ng-value="task.symbol") {{ task.symbol }} - {{ task.name }}
-                .form-actions
-                    md-button(ng-click="modalCtrl.close()") Anuluj
-                    md-button.md-raised.md-primary(ng-click="modalCtrl.save()" ng-if="modalCtrl.buildService.branches.length > 0" ng-disabled="!newBuildForm.$valid") Buduj
+            div(ng-if="modalCtrl.ready && modalCtrl.buildService.branches.length === 0")
+                p Nie mogliśmy pobrać listy dostępnych branchy. Jesteś pewien, że ustawienia projektu są poprawne?
+            div(ng-if="modalCtrl.ready && modalCtrl.buildService.databases.length === 0")
+                p Nie istnieje żadna wolna baza danych. Usuń którąś z instancji, lub poproś administratora o dodanie kolejnych baz
+            div(ng-if="modalCtrl.ready && modalCtrl.buildService.branches.length > 0 && modalCtrl.buildService.databases.length > 0")
+                form(name="newBuildForm" layout="column" novalidate ng-if="modalCtrl.ready")
+                    md-input-container
+                        label Nazwa builda
+                        input(name="name" minlength="3" maxlength="30" required ng-model="modalCtrl.buildConfiguration.name")
+                        div(ng-messages="newBuildForm.name.$error")
+                            div(ng-message="required") To pole jest wymagane
+                            div(ng-message="md-maxlength") Nazwa nie może być dłuższa niż 30 znaków
+                            div(ng-message="minlength") Nazwa nie może być krótsza niż 3 znaki
+                    md-input-container
+                        label Wybierz branch
+                        md-select(name="branch" required ng-model="modalCtrl.buildConfiguration.branch")
+                            md-option(ng-repeat="branch in modalCtrl.buildService.branches" ng-value="branch") {{ branch }}
+                        div(ng-messages="newBuildForm.branch.$error")
+                            div(ng-message="required") To pole jest wymagane
+                    md-input-container
+                        label Wybierz bazę danych
+                        md-select(name="database" required ng-model="modalCtrl.buildConfiguration.databaseId")
+                            md-option(ng-repeat="database in modalCtrl.buildService.databases" ng-value="database.id") {{ database.name }} - {{ database.comment }}
+                        div(ng-messages="newBuildForm.database.$error")
+                            div(ng-message="required") To pole jest wymagane
+                    md-checkbox.md-primary(ng-if="modalCtrl.buildService.checklists.length > 0" ng-model="modalCtrl.checklistsVisible") Powiąż checklistę
+                    md-input-container(ng-if="modalCtrl.checklistsVisible && modalCtrl.buildService.checklists.length > 0")
+                        label Wybierz checklistę do podpięcia
+                        md-select(name="checklist" required ng-model="modalCtrl.buildConfiguration.checklistId")
+                            md-option(ng-repeat="checklist in modalCtrl.buildService.checklists" ng-value="checklist.id") {{ checklist.name }}
+                    md-checkbox.md-primary(ng-if="modalCtrl.buildService.jiraTasks.length > 0" ng-model="modalCtrl.jiraVisible") Powiąż z taskiem w Jirze
+                    md-input-container(ng-if="modalCtrl.jiraVisible && modalCtrl.buildService.jiraTasks.length > 0")
+                        label Wybierz task z Jiry
+                        md-select(name="task" required ng-model="modalCtrl.buildConfiguration.jiraTaskSymbol")
+                            md-option(ng-repeat="task in modalCtrl.buildService.jiraTasks" ng-value="task.symbol") {{ task.symbol }} - {{ task.name }}
+                    .form-actions
+                        md-button(ng-click="modalCtrl.close()") Anuluj
+                        md-button.md-raised.md-primary(ng-click="modalCtrl.save()" ng-if="modalCtrl.buildService.branches.length > 0" ng-disabled="!newBuildForm.$valid") Buduj
