Added "add" button on checklist details page

--- a/source_js/source/scss/checklists.scss
+++ b/source_js/source/scss/checklists.scss
@@ -51,6 +51,10 @@
 .checklist-details {
   md-input-container {
     width: 100%;
+
+    .add-button {
+      order: 3;
+    }
   }
 
   .checklist-actions {
