--- a/source_js/source/ts/projects/edit/jira/jiraIntegration.pug
+++ b/source_js/source/ts/projects/edit/jira/jiraIntegration.pug
@@ -1,6 +1,5 @@
 .jira-integration
     h4 Konfiguracja integracji z Jirą
-    h5 Zacznij od poprawnego skonfigurowania Jiry. W ustawieniach aplikacji dodaj nowy link oraz skonfiguruj przychodzącą autentykację. Następnie uzupełnij poniższe pola
     .md-dialog-content
         form(name="jiraForm" layout="column" novalidate ng-submit="projectCtrl.saveJiraConfiguration()")
             div(layout="row")
@@ -13,35 +12,26 @@
                     div(ng-messages="jiraForm.url.$error")
                         div(ng-message="required") To pole jest wymagane
                 md-input-container(flex)
-                    label Nazwa projektu w Jirze
-                    input(name="projectName" required ng-model="projectCtrl.jiraConfigurationService.jiraConfig.projectName")
+                    label Symbol projektu w Jirze
+                    input(name="projectSymbol" required ng-model="projectCtrl.jiraConfigurationService.jiraConfig.projectSymbol")
                     md-icon.helper
                         i.material-icons.grey help_outline
-                        md-tooltip Nazwa projektu z którym chcesz nwiązać połączenie
+                        md-tooltip Symbol projektu w Jirze z którym chcesz nwiązać połączenie
                     div(ng-messages="jiraForm.projectName.$error")
                         div(ng-message="required") To pole jest wymagane
-            div(layout="row")
                 md-input-container(flex)
-                    label Klucz konsumenta
-                    input(name="consumerKey" required ng-model="projectCtrl.jiraConfigurationService.jiraConfig.consumerKey")
+                    label Login
+                    input(name="login" required ng-model="projectCtrl.jiraConfigurationService.jiraConfig.login")
                     md-icon.helper
                         i.material-icons.grey help_outline
-                        md-tooltip Klucz konsumenta który podałeś w konfiguracji Jiry (pole "Consumer key")
+                        md-tooltip Login użytkownika Jiry z dostępem do konfigurowanego projektu
                     div(ng-messages="jiraForm.consumerKey.$error")
                         div(ng-message="required") To pole jest wymagane
                 md-input-container(flex)
-                    label Nazwa konsumenta
-                    input(name="consumerName" required ng-model="projectCtrl.jiraConfigurationService.jiraConfig.consumerName")
+                    label Hasło
+                    input(name="password" required ng-model="projectCtrl.jiraConfigurationService.jiraConfig.password" type="password")
                     md-icon.helper
                         i.material-icons.grey help_outline
-                        md-tooltip Nazwa konsumenta który podałeś w konfiguracji Jiry (pole "Consumer name")
+                        md-tooltip Hasło użytkownika
                     div(ng-messages="jiraForm.consumerName.$error")
-                        div(ng-message="required") To pole jest wymagane
-                md-input-container(flex)
-                    label Nazwa klucza prywatnego
-                    input(name="key" required ng-model="projectCtrl.jiraConfigurationService.jiraConfig.privateKeyFileName")
-                    md-icon.helper
-                        i.material-icons.grey help_outline
-                        md-tooltip Nazwa pliku z kluczem prywatnym odpowiadającym kluczowi publicznemu podanemu w konfiguracji Jiry. Plik powiniene znajdować się w katalogu web/keys Buildera
-                    div(ng-messages="jiraForm.key.$error")
                         div(ng-message="required") To pole jest wymagane
